--- a/spring-boot-starter-alipay/pom.xml
+++ b/spring-boot-starter-alipay/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>1.2.22</version>
+        <version>1.2.23</version>
     </parent>
 
     <groupId>com.guanmengyuan.spring-ex</groupId>
@@ -38,6 +38,11 @@
         <dependency>
             <groupId>com.alipay.sdk</groupId>
             <artifactId>alipay-easysdk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
+            <scope>optional</scope>
         </dependency>
     </dependencies>
 </project>
