--- a/spring-boot-starter-web/pom.xml
+++ b/spring-boot-starter-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>1.2.23</version>
+        <version>1.2.24</version>
     </parent>
 
     <groupId>com.guanmengyuan.spring-ex</groupId>
@@ -56,7 +56,11 @@
             <artifactId>spring-ex-common-model</artifactId>
         </dependency>
         <dependency>
-            <groupId>cn.hutool</groupId>
+            <groupId>org.dromara.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.dromara.hutool</groupId>
             <artifactId>hutool-json</artifactId>
         </dependency>
     </dependencies>
